# LonelyPianist

./: .gitignore  .swiftformat  .swiftlint.yml  AGENTS.md  Makefile  README.en.md  README.md  THIRD_PARTY_NOTICES.md
LonelyPianist/: AppContext.swift  AppDelegate.swift  ContentView.swift  Info.plist  LonelyPianistApp.swift  README.md
LonelyPianist.xcodeproj/: project.pbxproj
LonelyPianistAVP/: AGENTS.MD  AGENTS.md  AppModel.swift  AppState.swift  ContentView.swift  ImmersiveView.swift  Info.plist  LonelyPianistAVPApp.swift  README-Step3-AudioRecognition.md  README.md  ToggleImmersiveSpaceButton.swift
LonelyPianistAVPTests/: AIPerformanceClipSelectorTests.swift  AIPerformanceCoordinatorTests.swift  ARKitAuthorizationRequirementsTests.swift  AppModelKeyboardGeometryTests.swift  AppRouterTests.swift  AsyncStreamBroadcasterTests.swift  AudioImportServiceTests.swift  AudioSampleRollingBufferTests.swift  AudioStepAttemptAccumulatorTests.swift  AutoplayPerformanceTimelineTests.swift  AutoplayTimelineTimeCursorTests.swift  BundledSampleScoreTests.swift  CalibrationFlowViewModelTests.swift  CalibrationPointCaptureServiceTests.swift  ChordAttemptAccumulatorTests.swift  GazePlaneDiskConfirmationViewModelTests.swift  GazePlaneHitTestServiceTests.swift  GoertzelNoteDetectorTests.swift  GrandStaffNotationLayoutServiceTests.swift  GrandStaffNotationViewportLayoutServiceTests.swift  HandPianoActivityGateTests.swift  HarmonicTemplateFactoryTests.swift  HarmonicTemplateModelTests.swift  (+95 more)
python_backend/aria_server/: pyproject.toml
python_backend/aria_server/aria_server/: server.py
(+792 files in other folders)
